# azure-demo-app

./: .gitignore  README.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  main.py  telemetry.py
backend/src/api/: dependencies.py  routes.py  simulation.py
backend/src/models/: __init__.py  service.py  simulation.py
backend/src/services/: __init__.py  storage.py
backend/tests/: conftest.py
backend/tests/contract/: __init__.py  test_openapi.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_storage.py  test_telemetry.py
data/: services.json
frontend/: .env.example  README.md  pyproject.toml  startup.sh
frontend/src/: __init__.py  api_client.py  app.py  config.py  telemetry.py
frontend/src/components/: filters.py  service_form.py  service_list.py
frontend/tests/: conftest.py  test_api_client.py  test_telemetry.py
infrastructure/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  tfplan  variables.tf
infrastructure/modules/app_service/: main.tf
infrastructure/modules/monitoring/: main.tf
infrastructure/modules/resource_group/: main.tf
infrastructure/modules/storage/: main.tf
scripts/: deploy.sh  dev.sh  test.sh
specs/001-initial-app-infrastructure/: plan.md  spec.md  tasks.md
specs/001-initial-app-infrastructure/checklists/: requirements.md
specs/002-azure-otel-telemetry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-azure-otel-telemetry/contracts/: README.md
specs/003-telemetry-simulation-buttons/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-telemetry-simulation-buttons/contracts/: simulation-api.yaml
