[project]
name = "azure-services-backend"
version = "0.1.0"
description = "FastAPI backend for Azure Service Catalog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "uvicorn[standard]>=0.27.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "opencensus-ext-azure>=1.1.13",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    # Exclude Azure-specific code that requires credentials for testing
    "src/services/storage.py",  # AzureBlobStorageAdapter requires Azure access
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    # Exclude Application Insights setup (conditional on credentials)
    "if settings.applicationinsights_connection_string:",
    "if config.APPLICATIONINSIGHTS_CONNECTION_STRING:",
]
